changing something around body

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,13 @@
 h1 {
     color:green;
 }
+img{
+    width:250px;
+    height:auto;
+}
+
+body{
+    background-color:cyan;
+    margin:0 auto;
+    text-align:center;
+}
